# example-data-science-project

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  make_mock_github_containers.sh  publiccode.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  automerge_dependabot.yml
.github/workflows/: automerge_bot_prs.yml  ci.yml  ghcr-cleaner.yml  projects.yml
data/: constants.py  dataset_generator.py  download_dataset.py
example_datascience/: __main__.py
tests/: test_main.py
