[tool.poetry]
name = "example_datascience"
version = "0.1.0"
description = ""
authors = ["ai-validation-team <ai-validation@minibzk.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
kaleido = "0.2.1.post1"
pycaret = "^3.3.2"
pandas = "2.1.4"
kaggle = "^1.6.17"
xgboost = "^2.1.4"
catboost = "^1.2.7"
fairlearn = "^0.12.0"
matplotlib = "3.7.5"
aif360 = "^0.6.1"
evidently = "^0.6.5"
isort = "^5.13.2"
pre-commit = "4.1.0"
ruff = "0.9.10"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
coverage = "^7.6.12"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.10"
pre-commit = "^4.1.0"
pyright = "^1.1.394"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Ruff settings: https://docs.astral.sh/ruff/configuration/
[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["I", "SIM", "B", "UP", "F", "E"]

fixable = ["ALL"]

[tool.pyright]
pythonVersion = ">=3.11,<3.13"
typeCheckingMode = "strict"
reportMissingImports = true
reportMissingTypeStubs = true

[tool.coverage.run]
branch = true
command_line = "-m pytest ./tests"

[tool.coverage.report]
fail_under = 95

[tool.coverage.html]
directory = "htmlcov"
title = "example_datascience"


[tool.pytest.ini_options]
testpaths = [
    "tests"
]
